--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-watch",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A file watch command line tool for run shell while file changed.",
   "main": "index.js",
   "bin": {
@@ -25,7 +25,7 @@
   "dependencies": {
     "commander": "~2.9.0",
     "debug": "~2.2.0",
-    "gaze": "~1.0.0",
+    "gaze": "^1.1.2",
     "shelljs": "^0.7.5"
   }
 }
